#14 adds full first functional implementation of evaluation algorithm